[project]
name = "pyvisca"
version = "0.1.2"
authors = [
    { name = "Samarthya Lykamanuella", email = "93555329+groaking@users.noreply.github.com" },
]
maintainers = [
    { name = "Samarthya Lykamanuella", email = "93555329+groaking@users.noreply.github.com" },
]
dependencies = [
  "pyserial",
  "scipy",
]
license = {file = "LICENSE"}
keywords = ["Sony", "VISCA", "PTZ", "camera", "CCTV", "pan tilt zoom", "serial monitor", "digital camera", "serial", "control", "lens", "interface"]
description = "A Python module for controlling PTZ cameras running on Sony VISCA protocol via serial USB"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB)",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Communications Device Class (CDC)",
    "Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Miscellaneous",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/groaking/pyvisca"
Repository = "https://github.com/groaking/pyvisca.git"
Changelog = "https://github.com/groaking/pyvisca/blob/master/CHANGELOG.md"
Issues = "https://github.com/groaking/pyvisca/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
